[package]
name = "glass-rust"
version = "0.9.0"
authors = ["theJadeDev", "contributors"]
edition = "2021"
description = "Code a Spigot Plugin in Rust! This is the template repo, you can easily update your bindings by replacing the bindings folder!"
readme = "README.md"
homepage = "https://github.com/jetware-mc/glass-rust#"
repository = "https://github.com/jetware-mc/glass"
license-file = "LICENSE"
keywords = ["java", "wasm", "minecraft"]
categories = ["java", "wasm"]
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[profile.release]
lto = true
panic = "abort"